--- a/ВЕРСТКА/style.css
+++ b/ВЕРСТКА/style.css
@@ -382,143 +382,178 @@ footer .right .info ul .first {
     line-height: 200%;
 }
 
-/* начинается страница с курсами */
 
-.header_cours {
-    height: 250px;
-    width: 100%;
-    background-image: url(img/header-img.png);
-    background-color: #5a5a5a;
-    background-size: cover;
-    background-repeat: no-repeat;
+/* НАШИ КУРСЫ */
+
+.header_cours { 
+    height: 250px; 
+    width: 100%; 
+    background-image: url(img/6\ 5.png); 
+    background-color: #5a5a5a; 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    position: relative; 
+} 
+ 
+.header_cours img{ 
+    position: absolute; 
+    top: 40px; 
+    left: 60px; 
+} 
+ 
+.header_cours h1 { 
+    color: #fff; 
+    font-family: 'Lora'; 
+    font-weight: 300; 
+    font-size: 46px; 
+    text-align: center; 
+    padding-top: 60px; 
+} 
+ 
+.header__nav { 
+    background-color: rgba(219, 219, 219, 0.255); 
+    height: 100px; 
+    position: absolute; 
+    bottom: 0; 
+ 
+    width: 100%; 
+} 
+ 
+.header__nav ul{ 
+    list-style-type: none; 
+    display: flex; 
+    justify-content: space-around; 
+    padding-top: 35px; 
+} 
+ 
+.header__nav ul a { 
+    text-decoration: none; 
+ 
+} 
+ 
+.header__nav ul a li { 
+    color: #fff; 
+    font-family: 'Angst'; 
+    font-size: 28px; 
+} 
+ 
+.header__nav ul a li:hover { 
+    text-decoration: underline; 
+}
+
+/* начинается гланвый блок */
+
+.main__our_course {
+    height: 3600px;
     position: relative;
+    z-index: 0;
 }
 
-.header_cours img{
+.main__our_course .border1__our_course{
+    left: 0;
+    width: 600px;
+    height: 2000px;
+    border: 5px solid rgba(83, 83, 83, 0.623);
+    margin: 50px 0px 0px 450px;
     position: absolute;
-    top: 40px;
-    left: 60px;
-}
-
-.header_cours h1 {
-    color: #fff;
-    font-family: 'Lora';
-    font-weight: 300;
-    font-size: 46px;
-    text-align: center;
-    padding-top: 60px;
-}
-
-.header__nav {
-    background-color: rgba(219, 219, 219, 0.255);
-    height: 100px;
-    position: absolute;
-    bottom: 0;
-
-    width: 100%;
-}
-
-.header__nav ul{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    padding-top: 35px;
-}
-
-.header__nav ul a {
-    text-decoration: none;
-
-}
-
-.header__nav ul a li {
-    color: #fff;
-    font-family: 'Angst';
-    font-size: 28px;
-}
-
-.header__nav ul a li:hover {
-    text-decoration: underline;
-}
-
-/* main_cours */
-
-.main_cours {
-    position: relative;
-}
-
-.main_cours .sqr{
-    margin-top: 30px;
-    margin-left: 15%;
-    border: 5px solid #5a5a5a;
-    width: 1300px;
-    height: 1100px;
-    margin-bottom: 60px;
-}
-
-.bg-img {
-    position: absolute;
-    background-image: url(img/main.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 800px;
     z-index: 1;
-    top: 10%;
 }
 
-.bg-img .text {
-    margin: 5% 10%;
-    width: 1500px;
-    height: 600px;
-    background-color: #afafaf85;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center
-}
-
-.bg-img .text .main-text {
-    color: #FFF;
-    font-family: 'Lora';
-    font-size: 48px;
-    font-weight: 300;
-    line-height: normal;
-    width: 60%;
-    margin-bottom: 30px;
-    
-}
-
-.bg-img .text .price {
-    color: #FFF;
-    font-family: 'Lora';
-    font-size: 64px;
-    font-weight: 300;
-    line-height: normal;
-    text-decoration: underline;
-}
-
-.main_cours__btn {
-    width: 300px;
-    text-align: center;
-}
-
-.main_cours__btn {
+.main__our_course .border2__our_course{
+    right: 0;
+    bottom: 0;
+    width: 600px;
+    height: 2000px;
+    border: 5px solid rgba(83, 83, 83, 0.623);
+    margin: 0px 450px 50px 0px;
     position: absolute;
-    bottom: 5%;
-    left: 40%;
+    z-index: 2;
 }
 
-.footer_cours {
-    height: 165px;
-    background-color: #5a5a5a;
-    background-image: url(img/footer-2.png);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main__our_course .cards .card1 {
+    width: 1968;
+    height: 600px;
+    background-image: url(img/photo_5330351300111630530_y.jpg);
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
 }
 
-.footer_cours .social-icons {
-    width: 20%;
-    display: flex;
-    justify-content: space-evenly;
+.main__our_course .cards .card2 {
+    width: 1968;
+    height: 600px;
+    background-image: url(img/photo_5330351300111630531_y.jpg);
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+}
+
+.main__our_course .cards .card3 {
+    width: 1968;
+    height: 600px;
+    background-image: url(img/photo_5330351300111630534_y.jpg);
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+}
+
+.main__our_course .cards .card4 {
+    width: 1968;
+    height: 600px;
+    background-image: url(img/photo_5330351300111630535_y.jpg);
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+}
+
+.main__our_course .cards .card5 {
+    width: 1968;
+    height: 600px;
+    background-image: url(img/photo_5330351300111630533_y.jpg);
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+}
+
+.main__our_course .cards .text {
+    position: absolute;
+    right: 0;
+    margin: 180px 100px 0px 0px ;
+    width: 750px;
+    height: 250px;
+    background-color: rgba(255, 255, 255, 0.658);
+    border-radius: 20px;
+}
+
+.main__our_course .cards .text2 {
+    position: absolute;
+    left: 0;
+    margin: 180px 0px 0px 100px ;
+    width: 750px;
+    height: 250px;
+    background-color: rgba(255, 255, 255, 0.658);
+    border-radius: 20px;
+}
+
+.main__our_course .cards .name_text {
+    color: #000000;
+    text-decoration: none;
+    margin-top: 35px;
+    text-align: center;
+    font-family: 'Angst';
+    font-size: 64px;
+    font-weight: 400;
+}
+
+.main__our_course .cards hr {
+    width: 350px;
+    border: 2px solid black;
+    margin: 0 auto;
+    margin-top: 15px;
     
 }
