--- a/ВЕРСТКА/style.css
+++ b/ВЕРСТКА/style.css
@@ -693,8 +693,67 @@ footer .right .info ul .first {
 }
 
 .footer_cours .social-icons {
+    position: relative;
+    z-index: 0;
     width: 20%;
     display: flex;
     justify-content: space-evenly;
+    margin-top: 50px;
     
+}
+
+
+/* ИСТОРИЯ СОЗДАНИЯ */
+
+.main .info_1 {
+    display: flex;
+    height: 500px;
+    gap: 300px;
+    top: 50px;
+}
+
+.main .info_1 .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 900px;
+    color: #000;
+    font-family: 'Bookman Old Style';
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    padding-left: 7%
+}
+
+.main .info_1 {
+    display: flex;
+    position: relative;
+    z-index: 0;
+    
+    
+}
+
+
+.main .info_1 .right .border {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    right: 8.5%;
+}
+
+.main .info_1 .right .images {
+    background-image: url(img/9.jpg);
+    background-size: cover;
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    top: 5%;
+    right: 10%;
+   
 }
