--- a/ВЕРСТКА/style.css
+++ b/ВЕРСТКА/style.css
@@ -798,7 +798,7 @@ footer .right .info ul .first {
     width: 600px;
 }
 
-.form-block form .form__input::placeholder {
+.form-block form .form__input::placeholder, select {
     color: #000;
     font-family: "Lora";
     font-size: 24px;
@@ -824,4 +824,139 @@ footer .right .info ul .first {
 
 .sign-in-btn {
     margin-top: 60px;
+}
+
+.submit-app__foorm {
+    padding-top: 80px;
+}
+
+.reg__btn {
+    margin-top: 50px;
+}
+
+/* начинается страница личнг кабинета */
+
+.personal-area-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    position: relative;
+    padding: 50px 0;
+}
+
+.profile {
+    width: 900px;
+    height: 400px;
+    border: 3px solid black;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+}
+
+.profile p {
+    color: #000;
+    font-family: "Lora";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-align: center;
+}
+
+.profile__img-block {
+    width: 250px;
+    height: 300px;
+    flex-shrink: 0;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile__img-img {
+    
+    
+    width: 200px;
+    height: 250px;
+    background-color: #747474;
+}
+
+.profile__form {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.profile__form .form__input {
+    margin-bottom: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    border: none;
+    border-bottom: 4px solid #000;
+    width: 300px;
+    color: #000;
+    font-family: "Lora";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.personal-area_table {
+	width: 100%;
+	border: 1px solid #dddddd;
+	border-collapse: collapse; 
+}
+.personal-area_table th {
+	font-weight: bold;
+	padding:  10px;
+	border: 1px solid #dddddd;
+    color: #000;
+    text-align: center;
+    font-family: Angst;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.personal-area_table td {
+	border: 1px solid #dddddd;
+	padding: 5px;
+}
+
+.personal-area-btn {
+    background-color: #FFF;
+    width: 80px;
+    height: 80px;
+    border: 2px solid black;
+    border-radius: 50%;
+    position: absolute;
+    right: 15%;
+    bottom: 50px;
+    background-image: url(img/Vector\ \(1\).png);
+    background-size: cover;
+}
+
+/* АДМИНСКАЯ ЧАСТЬ */
+
+/* начинает страница заявок */
+
+.admin-main-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.admin_block {
+    width: 90%;
+    height: 1000px;
+    border: 10px solid #D9D9D9;
+    padding: 20px;
+}
+
+.admin_block .personal-area_table {
+    height: 100%;
 }
