--- a/ВЕРСТКА/style.css
+++ b/ВЕРСТКА/style.css
@@ -672,12 +672,9 @@ footer .right .info ul .first {
     text-decoration: underline;
 }
 
-.main_cours__btn {
+.main_cours__btn { 
     width: 300px;
     text-align: center;
-}
-
-.main_cours__btn {
     position: absolute;
     bottom: 5%;
     left: 40%;
@@ -798,7 +795,7 @@ footer .right .info ul .first {
     width: 600px;
 }
 
-.form-block form .form__input::placeholder, select {
+.form-block form .form__input::placeholder {
     color: #000;
     font-family: "Lora";
     font-size: 24px;
@@ -826,137 +823,220 @@ footer .right .info ul .first {
     margin-top: 60px;
 }
 
-.submit-app__foorm {
-    padding-top: 80px;
-}
+/* ИСТОРИЯ СОЗДАНИЯ */
 
-.reg__btn {
-    margin-top: 50px;
-}
-
-/* начинается страница личнг кабинета */
-
-.personal-area-block {
+.main .info_1 {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
+    height: 500px;
+    gap: 300px;
+    top: 50px; 
+    display: flex;
     position: relative;
-    padding: 50px 0;
+    z-index: 0;  
 }
 
-.profile {
+.main .info_1 .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 900px;
+    color: #000;
+    font-family: 'Bookman Old Style';
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    padding-left: 7%
+}
+
+.main .info_1 .right .border {
+    width: 600px;
     height: 400px;
-    border: 3px solid black;
+    border: 4px solid black;
     display: flex;
-    justify-content: space-around;
-    padding-top: 40px;
-}
-
-.profile p {
-    color: #000;
-    font-family: "Lora";
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    text-align: center;
-}
-
-.profile__img-block {
-    width: 250px;
-    height: 300px;
-    flex-shrink: 0;
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.profile__img-img {
-    
-    
-    width: 200px;
-    height: 250px;
-    background-color: #747474;
-}
-
-.profile__form {
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.profile__form .form__input {
-    margin-bottom: 50px;
-    height: 50px;
-    background-color: #ffffff;
-    border: none;
-    border-bottom: 4px solid #000;
-    width: 300px;
-    color: #000;
-    font-family: "Lora";
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-}
-
-.personal-area_table {
-	width: 100%;
-	border: 1px solid #dddddd;
-	border-collapse: collapse; 
-}
-.personal-area_table th {
-	font-weight: bold;
-	padding:  10px;
-	border: 1px solid #dddddd;
-    color: #000;
-    text-align: center;
-    font-family: Angst;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-.personal-area_table td {
-	border: 1px solid #dddddd;
-	padding: 5px;
-}
-
-.personal-area-btn {
-    background-color: #FFF;
-    width: 80px;
-    height: 80px;
-    border: 2px solid black;
-    border-radius: 50%;
     position: absolute;
-    right: 15%;
-    bottom: 50px;
-    background-image: url(img/Vector\ \(1\).png);
-    background-size: cover;
+    z-index: 1;
+    right: 8.5%;
 }
 
-/* АДМИНСКАЯ ЧАСТЬ */
+.main .info_1 .right .images img {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    top: 5%;
+    right: 10%;
+   
+}
 
-/* начинает страница заявок */
+.main .info_2 {
+    display: flex;
+    height: 500px;
+    gap: 300px;
+    top: 50px;
+    position: relative;
+    z-index: 0;
+    align-items: center;
+}
 
-.admin-main-block {
+.main .info_2 .right {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    right: 0;
+    width: 900px;
+    color: #000;
+    font-family: 'Bookman Old Style';
+    font-size: 32px;
+    font-weight: 300;
+    position: absolute;
+    z-index: 1;
+    right: 4%;
 }
 
-.admin_block {
-    width: 90%;
+.main .info_2 .left .border {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    left: 8.5%;
+    top: 0;
+}
+
+.main .info_2 .left .images img {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    top: 5%;
+    left: 10%;
+}
+
+.btn_history { 
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    
+}
+
+.btn_history .a_btn {
+    width: 300;
+    color: #000;
+    text-align: center;
+    font-family: 'Angst';
+    font-size: 32px;
+}
+
+/* НАШИ ПРЕПОДАВАТЕЛИ */
+
+.main_our_teachers {
+    height: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_our_teachers .border {
+    width: 1689px;
     height: 1000px;
-    border: 10px solid #D9D9D9;
-    padding: 20px;
+    border: 4px solid black;
+    padding-bottom: 2%;
 }
 
-.admin_block .personal-area_table {
-    height: 100%;
+.main_our_teachers .info_1 {
+    display: flex;
+    height: 500px;
+    gap: 300px;
+    top: 50px; 
+    display: flex;
+    position: relative;
+    z-index: 0;  
 }
+
+.main_our_teachers .info_1 .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+    color: #000;
+    font-family: 'Bookman Old Style';
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    padding-left: 4%
+}
+
+.main_our_teachers .info_1 .right .border {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    right: 8.5%;
+    top: 5%;
+}
+
+.main_our_teachers .info_1 .right .images img {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    right: 10%;
+}
+
+.main_our_teachers .info_2 {
+    display: flex;
+    height: 500px;
+    gap: 300px;
+    top: 50px;
+    position: relative;
+    z-index: 0;
+    align-items: center;
+}
+
+.main_our_teachers .info_2 .right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 4%;
+    width: 700px;
+    color: #000;
+    font-family: 'Bookman Old Style';
+    font-size: 32px;
+    font-weight: 300;
+    position: absolute;
+    z-index: 1;
+}
+
+.main_our_teachers .info_2 .left .border {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    left: 8.5%;
+    bottom: 7%;
+}
+
+.main_our_teachers .info_2 .left .images img {
+    width: 600px;
+    height: 400px;
+    border: 4px solid black;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    top: 0%;
+    left: 10%;
+}
+
