--- a/modern-2-main/style.css
+++ b/modern-2-main/style.css
@@ -553,11 +553,6 @@ footer .right .info ul .first {
     font-family: 'Angst';
     font-size: 64px;
     font-weight: 400;
-    transition: 0.5s;
-}
-
-.main__our_course .cards .name_text:hover {
-    color: #5a5a5a;
 }
 
 .main__our_course .cards hr {
@@ -1011,13 +1006,13 @@ footer .right .info ul .first {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 600px;
+    width: 900px;
     color: #000;
-    font-family: 'Lora';
+    font-family: 'Bookman Old Style';
     font-size: 32px;
     font-style: normal;
     font-weight: 300;
-    padding-left: 9%
+    padding-left: 7%
 }
 
 .main .info_1 .right .border {
@@ -1062,14 +1057,14 @@ footer .right .info ul .first {
     align-items: center;
     justify-content: center;
     right: 0;
-    width: 600px;
+    width: 900px;
     color: #000;
-    font-family: 'Lora';
+    font-family: 'Bookman Old Style';
     font-size: 32px;
     font-weight: 300;
     position: absolute;
     z-index: 1;
-    right: 8%;
+    right: 4%;
 }
 
 .main .info_2 .right:hover {
@@ -1148,7 +1143,7 @@ footer .right .info ul .first {
     justify-content: center;
     width: 700px;
     color: #000;
-    font-family: 'Lora';
+    font-family: 'Bookman Old Style';
     font-size: 32px;
     font-style: normal;
     font-weight: 300;
@@ -1193,7 +1188,7 @@ footer .right .info ul .first {
     right: 4%;
     width: 700px;
     color: #000;
-    font-family: 'Lora';
+    font-family: 'Bookman Old Style';
     font-size: 32px;
     font-weight: 300;
     position: absolute;
